--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,4 +1,7 @@
-scss_files: 'app/assets/stylesheets/**'
+scss_files: "app/assets/stylesheets/**"
 exclude:
-  - 'app/assets/stylesheets/application.scss'
-  - 'vendor/assets/**'
+  - "app/assets/stylesheets/application.css"
+  - "vendor/assets/**"
+linters:
+  Comment:
+    exclude: "**/*.scss"
