seperate-css-file

--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -24,7 +24,8 @@ RemoveEmptyHelpersCheck: { }
 #RemoveTabCheck: { }
 RemoveTrailingWhitespaceCheck: { }
 RemoveUnusedMethodsInControllersCheck: { except_methods: [
-  "PagesController#show"
+  "PagesController#show",
+  "HomeController#show"
 ] }
 RemoveUnusedMethodsInHelpersCheck: { except_methods: [] }
 RemoveUnusedMethodsInModelsCheck: { except_methods: [] }
