--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -26,7 +26,8 @@ RemoveTrailingWhitespaceCheck: { }
 RemoveUnusedMethodsInControllersCheck: { except_methods: [
   "PagesController#show",
   "HomeController#show",
-  "PagesController#index"
+  "PagesController#index",
+  "AddressesController#index"
 ] }
 RemoveUnusedMethodsInHelpersCheck: { except_methods: [] }
 RemoveUnusedMethodsInModelsCheck: { except_methods: [] }
