--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -25,7 +25,8 @@ RemoveEmptyHelpersCheck: { }
 RemoveTrailingWhitespaceCheck: { }
 RemoveUnusedMethodsInControllersCheck: { except_methods: [
   "PagesController#show",
-  "HomeController#show"
+  "HomeController#show",
+  "PagesController#index"
 ] }
 RemoveUnusedMethodsInHelpersCheck: { except_methods: [] }
 RemoveUnusedMethodsInModelsCheck: { except_methods: [] }
