--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@
 /public/javascripts/translation.js
 
 /vendor
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
