--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,1 +1,9 @@
 slot_per_floor: 20
+min_seats: 30
+max_seats: 60
+min_floors: 1
+max_floors: 2
+max_horizontal: 20
+min_horizontal: 1
+min_vertical: 1
+max_vertical: 20
